revise and update section

--- a/manuscripts/child-documents/methods.Rmd
+++ b/manuscripts/child-documents/methods.Rmd
@@ -99,6 +99,8 @@ We estimated the cross spectral density between two signals $x$ and $y$ using mu
 
 The phase lag index takes values between 0 and 1. A value of 0 indicates either no phase coupling or phase coupling with a phase angle difference centred around 0 or 180 degrees, and a value of 1 indicates perfect phase coupling with a consistent nonzero phase angle difference. By only considering consistent nonzero phase angle differences as indicators of phase coupling between two sensors, the phase lag index ignores phase coupling that could be explained by volume conduction from a single common source (at the cost of also ignoring non-spurious zero lag coupling), making it a sound measure of the interactions between different underlying neural sources [@stametal_PhaseLagIndex_2007].
 
+Finally, to examine the sensitivity of our analyses to different spectral analysis approaches [cf. @bruns_FourierHilbertWaveletbased_2004], we also estimated the phase lag index using the Hilbert transform method [@stametal_PhaseLagIndex_2007]. The results of these analyses are presented in Appendix A.
+
 ```{r rfftfreq, eval=FALSE}
 n_times <- 1000
 n_freqs <- n_times + 1
@@ -162,7 +164,7 @@ The amplitude envelope correlation takes values between 0 and 1. A value of 0 in
 
 #### Interpreting functional connectivity
 
-We use connectivity profile matrices [@demuruetal_FunctionalEffectiveWhole_2017] to compactly display the phase and amplitude coupling functional connectome from each recording. These plots serve as a supplement to our similarity analyses, providing a broad idea of what aspects of functional connectivity are being summarized by a given similarity estimate. Each row shows the vectorized lower-triangle of the phase or amplitude coupling functional connectome from a given recording (i.e., all unique pairs in the connectome), and each column represents a pair of sensors. The strength of coupling between any pair of sensors corresponds to their phase lag index or amplitude envelope correlation estimate and is represented by the colour of that cell in the matrix, with darker colours representing less coupling and brighter colours representing more coupling. Each functional connectome is presented in matrix form in Appendix C. 
+We use connectivity profile matrices [@demuruetal_FunctionalEffectiveWhole_2017] to compactly display the phase and amplitude coupling functional connectome from each recording. These plots serve as a supplement to our similarity analyses, providing a broad idea of what aspects of functional connectivity are being summarized by a given similarity estimate. Each row shows the vectorized lower-triangle of the phase or amplitude coupling functional connectome from a given recording (i.e., all unique pairs in the connectome), and each column represents a pair of sensors. The strength of coupling between any pair of sensors corresponds to their phase lag index or amplitude envelope correlation estimate and is represented by the colour of that cell in the matrix, with darker colours representing less coupling and brighter colours representing more coupling. Each functional connectome is presented in matrix form in the online supplement. 
 
 ### Functional connectome similarity
 
@@ -188,25 +190,25 @@ We use similarity matrices to examine the similarities of functional connectomes
 
 <!-- Constant dispersion (phi) was used for the model; this doesn't need to be mentioned explicitly, but it's worth leaving a reminder here as a comment. -->
 
-We used a mixed beta regression to model how functional connectome similarity varied between and within individuals, sessions, and states at the group-level for each frequency band [for an accessible overview of mixed beta regression, see @doumaweedon_AnalysingContinuousProportions_2019; @heiss_GuideModelingProportions_2021]. The unit of observation was the pair of functional connectomes used for a given similarity estimate. The response variable was the RV coefficient estimated for each pair, which was modelled with a beta distribution and related to the predictors with the logit link function following the parameterization of @cribari-netozeileis_BetaRegression_2010 and @ferraricribari-neto_BetaRegressionModelling_2004. The predictors were binary indicators (where $0 = \textrm{No}$ and  $1 = \textrm{Yes}$) for whether a pair was within participant, within session, or within state, and their interactions. Because the RV coefficient estimates are based on the similarity of pairs of functional connectomes, we included a random intercept for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common. All random effects were assumed to be normally distributed [@brooksetal_GlmmTMBBalancesSpeed_2017].
+We used a mixed beta regression to model how functional connectome similarity varied between and within individuals, sessions, and states at the group-level for each frequency band [for an accessible overview of mixed beta regression, see @doumaweedon_AnalysingContinuousProportions_2019; @heiss_GuideModelingProportions_2021]. The unit of observation was the pair of functional connectomes used for a given similarity estimate. The response variable was the RV coefficient estimated for each pair, which was modelled with a beta distribution and related to the predictors with the logit link function following the parameterization of @cribari-netozeileis_BetaRegression_2010 and @ferraricribari-neto_BetaRegressionModelling_2004. The predictors were binary indicators (where $0 = \textrm{No}$ and  $1 = \textrm{Yes}$) for whether a pair was within participant, within session, or within state, and their interactions. Because the RV coefficient estimates are based on the similarity of pairs of functional connectomes we accounted for statistical dependencies between observations by adding random intercepts to the model. All random effects were assumed to be normally distributed [@brooksetal_GlmmTMBBalancesSpeed_2017].
 
-We also originally planned to include a random intercept for the participant pair to account for the repeated observation of the same participant pairs, however including this term led to convergence problems for several of our models where the estimate for the variance of this parameter was zero. Although in principle participant pair should have been included in the statistical model as a random intercept to account for the repeated measures design, we decided not to include this parameter for pragmatic reasons so all our models would converge. The effect of not including participant pair was negligible for point estimates, which were similar or equivalent between models where it was and was not included; but was noticeable for interval estimates, which were generally wider by a factor of two to four when it was included compared to when it was not included. This difference did not meaningfully change the conclusions drawn from our results, however.
+We fit two versions of this model, which differed slightly in their random effects specification: A *maximal model* (@barretal_RandomEffectsStructure_2013) with random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from to account for statistical dependencies between observations that had a connectome in common, and a random intercept for the participant pair to account for the repeated observation of the same participant pairs; and a *reduced model* with only random intercepts for both the $\mathbf{X}$ and $\mathbf{Y}$ connectome that each observation came from. The reduced models were fit for pragmatic reasons, due to convergence problems with several of the maximal models where the estimate for the variance of the participant pair parameter was zero (i.e., the fit was singular). The effect of not including participant pair was negligible for point estimates, which were similar or equivalent between models where it was and was not included; but was noticeable for interval estimates, which were generally wider by a factor of two to four when it was included compared to when it was not included. This difference did not meaningfully change the conclusions drawn from our results, however. Results from the reduced models are presented in the results section of this manuscript for parsimony across sections, and results from the maximal models are shown in Figures \@ref(fig:phase-similarity-plots-maximal-theta) to \@ref(fig:phase-similarity-plots-hilbert-maximal-gamma) in Appendix A.
 
 The fit of the model was assessed using the following diagnostics: Posterior predictive checks---wherein we simulated replicated data under the fitted model and compared these to the observed data---were used to check for systematic differences between the fitted model and observed data [@gelmanetal_BayesianDataAnalysis_2013; @gelmanetal_RegressionOtherStories_2020; @gelmanhill_DataAnalysisUsing_2006]. Randomized quantile residuals plotted against uniform distribution quantiles were used to check for signs of model misspecification [@dunnsmyth_RandomizedQuantileResiduals_1996; @hartiglohse_DHARMaResidualDiagnostics_2022]. Quantiles of the random effects plotted against standard normal distribution quantiles were used to check if the random effects were normally distributed; however, generalized linear mixed effects models have a large degree of robustness against misspecifying the shape of the random effects distribution [see @mccullochneuhaus_MisspecifyingShapeRandom_2011]. Variance Inflation Factors were used to check for multicollinearity between the predictors [@foxmonette_GeneralizedCollinearityDiagnostics_1992; @marcoulidesraykov_EvaluationVarianceInflation_2019; @obrien_CautionRegardingRules_2007], where a value of less than five as indicated low multicollinearity between the predictors, values between five and ten moderate, and values greater than ten high and not tolerable [@jamesetal_IntroductionStatisticalLearning_2021].
 
-After fitting the model we constructed a reference grid using estimated marginal means [@lenthetal_EmmeansEstimatedMarginal_2022; @searleetal_PopulationMarginalMeans_1980], which were back-transformed to the response scale (0-1) for interpretability. The estimated marginal means were then used to estimate the difference in functional connectome similarity within and between participants using pairwise contrasts. Differences were estimated for (1) the overall difference in similarity within and between participants, which we term the *main effect*; (2) the difference in similarity within and between participants for each level of one predictor (e.g., within session similarity) while averaging over levels of the other predictor (e.g., within and between state similarity); (3) the difference in similarity within and between participants for the unique combinations within and between session and state. For any of these contrasts: A difference of zero indicated equal amounts of functional connectome similarity within and between participants, a positive difference indicated more similarity within than between participants, and a negative difference indicated more similarity between than within participants. <!-- These contrasts were the estimands of our model and will be the focus of discussion in the results section. -->
+After fitting the model we constructed a reference grid using estimated marginal means [@lenthetal_EmmeansEstimatedMarginal_2022; @searleetal_PopulationMarginalMeans_1980], which were back-transformed to the response scale (0-1) for interpretability. The estimated marginal means were then used to estimate the difference in functional connectome similarity within and between participants using pairwise contrasts, as we illustrated in the introduction. Differences were estimated for (1) the overall difference in similarity within and between participants, which we term the *main effect*; (2) the difference in similarity within and between participants for each level of one predictor (e.g., within session similarity) while averaging over levels of the other predictor (e.g., within and between state similarity); (3) the difference in similarity within and between participants for the unique combinations within and between session and state. For any of these contrasts: A difference of zero indicated equal amounts of functional connectome similarity within and between participants, a positive difference indicated more similarity within than between participants, and a negative difference indicated more similarity between than within participants. <!-- These contrasts were the estimands of our model and will be the focus of discussion in the results section. -->
 
 #### Interpreting group-level contrasts
 
-We use interval plots to report the group-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. To interpret these contrasts, we report compatibility intervals (CIs), which are equivalent to classical confidence intervals [@amrheingreenland_DiscussPracticalImportance_2022]. An $x\%$ compatibility interval shows the effect sizes most compatible with our data, given the correctness of the set of statistical assumptions used to compute the interval, which we call the *background model* [see @amrheingreenland_DiscussPracticalImportance_2022]. As discussed by @amrheinetal_ScientistsRiseStatistical_2019, there are two important points to keep in mind when interpreting compatibility intervals. First, although interval shows the values most compatible with our data, it does not mean values outside the interval are incompatible; they are merely less compatible. Second, the point estimate and values near it are more compatible with our data than values near the limits of the interval; we use both 95% and 66% compatibility intervals in our plots to highlight this. Additionally, given that the correctness of all assumptions used to compute our estimates was questionable (e.g., we knowingly misspecified the random effects of the mixed beta regressions), we emphasize that our estimates likely understate uncertainty about the effect sizes most compatible with our data, and should not be taken as showing some general truth.
+We use interval plots to report the group-level contrasts estimating the difference in functional connectome similarity within and between participants at various levels of the session and state predictors. To interpret these contrasts, we report compatibility intervals (CIs), which are equivalent to classical confidence intervals [@amrheingreenland_DiscussPracticalImportance_2022]. An $x\%$ compatibility interval shows the effect sizes most compatible with our data, given the correctness of the set of procedural and statistical assumptions used to compute the interval, which we call the *background model* [see @amrheingreenland_DiscussPracticalImportance_2022]. As discussed by @amrheinetal_ScientistsRiseStatistical_2019, there are two important points to keep in mind when interpreting compatibility intervals. First, although interval shows the values most compatible with our data, it does not mean values outside the interval are incompatible; they are merely less compatible, given our background model. Indeed, there are many values outside the interval that will also be compatible with our data, which have not been included due to (known and unknown) assumptions that we have not modelled [@amrheinetal_InferentialStatisticsDescriptive_2019]. Second, the point estimate and values near it are more compatible with our data than values near the limits of the interval; we use both 95% and 66% compatibility intervals in our plots to highlight this. Additionally, given that the correctness of *all* assumptions used to compute our estimates was doubtful (e.g., we knowingly misspecified the random effects of the reduced mixed beta regression models, the absence of measurement errors in our procedure is unlikely, etc.), we emphasize that our estimates likely understate uncertainty about the effect sizes most compatible with our data, and should not be taken as showing some general truth [@amrheinetal_InferentialStatisticsDescriptive_2019].
 
 Based on the results of @grattonetal_FunctionalBrainNetworks_2018, we might consider contrasts showing that functional connectomes were approximately 0.2 points (on the response scale) more similar within participants than between participants to correspond to what has been found with shorter fMRI scanning times (depending on the task, anywhere from 5 to 15 minutes), and approximately 0.3 points more similar to correspond to what has been found with longer scanning times (depending on the task, anywhere from 25 to 75 minutes),[^6] keeping in mind that finding equivalent effect sizes would be surprising, given the differences in measurement, design, and analysis between our studies. <!-- As a lower bound, we considered differences of approximately 0.1 points to be a small effect size, as differences of this size might still provide weak evidence for the presence of network variants -->.
 
-In addition, for readers unfamiliar with the analytic approach we have taken here, we also report null hypothesis significance tests of these contrasts in Appendix XYZ.
+In addition, to assist readers unfamiliar with the analytic approach we have taken here, for each contrast we also report the observed $p$-value corresponding to a targeted hypothesis test of zero difference in functional connectome similarity within and between participants. The $p$-value takes values between 0 and 1, and provides a measure of the degree of statistical compatibility between the targeted hypothesis and our data, given the background model [@greenland_ValidPValuesBehave_2019; @greenlandetal_StatisticalTestsValues_2016]. A value of 0 indicates complete incompatibility between the targeted hypothesis and our data, and a value of 1 indicates no incompatibility between the targeted hypothesis and our data apparent from the test [@greenland_ValidPValuesBehave_2019]. Additionally, just as we discussed for compatibility intervals, we emphasize that each $p$-value refers to a targeted hypothesis test of *every* assumption used to compute the test, including procedural and statistical assumptions as well as the targeted hypothesis of zero difference [@greenland_InvitedCommentaryNeed_2017]. Thus, a small $p$-value only suggests that there may be a problem with at least one assumption used to compute the test, without indicating which one; and a large $p$-value only suggests that the test did not detect a problem, without indicating whether this was because there were no problems or because the test was insensitive to them [@amrheinetal_InferentialStatisticsDescriptive_2019; @greenland_InvitedCommentaryNeed_2017]. Given that the correctness of *all* assumptions used to compute our tests was doubtful, we emphasize that the observed $p$-values corresponding to each of our targeted hypothesis tests merely describe the relation of our models to our data, and should not be taken as providing generalizable truths about the veracity of our scientific hypotheses [@amrheinetal_InferentialStatisticsDescriptive_2019].
 
 ### Individual-level functional connectome similarity contrasts
 
-To explore how well the group-level model and contrasts represented individual differences in our sample, we also fit a mixed beta regression for each participant, following the same parameterizations as the group-level model. These individual-level models were followed-up using the same pairwise contrasts as in the group-level model, and comparisons between the group-level and individual-level contrasts were done visually.
+To explore how well the group-level model and contrasts represented individual differences in our sample, we also fit a mixed beta regression for each participant, following the same parameterization as both the reduced and maximal group-level models. These individual-level models were followed-up using the same pairwise contrasts as in the group-level model, and comparisons between the group-level and individual-level contrasts were done visually. Results from the reduced and maximal models are presented in Appendix A.
 
 #### Interpreting individual-level contrasts
 
