--- a/manuscripts/child-documents/introduction.Rmd
+++ b/manuscripts/child-documents/introduction.Rmd
@@ -265,7 +265,9 @@ It is likely that the real data will be representative of more than one of the h
 knitr::include_graphics(here::here("figures/outcome-plot.png"))
 ```
 
-Based on the findings of previous fMRI network variant research [e.g., @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019], we expected to find patterns of results consistent with the fourth plot in Figure \@ref(fig:outcome-plot) across all frequency bands for both phase coupling and amplitude coupling functional connectomes---consistent with functional connectomes that were more similar within than between individuals across all contrasts, with greater variations in similarity related to state than session. However, we emphasize that any of the result patterns depicted in Figure \@ref(fig:outcome-plot) would provide supportive evidence of stable individual differences in EEG functional connectomes, albeit with somewhat different interpretations as we described above for the individual, individual-session, and individual-state effects. We had no expectations regarding the possible range of effect sizes we could find, but again note that relatively higher values correspond to greater within-individual functional connectome stability and between-individual differentiation across contexts; whereas relatively lower values correspond to lesser within-individual functional connectome stability and between-individual differentiation.
+Based on the findings of previous fMRI network variant research [e.g., @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019], we expected to find patterns of results consistent with the fourth plot in Figure \@ref(fig:outcome-plot) across all frequency bands for both phase coupling and amplitude coupling functional connectomes---consistent with functional connectomes that were more similar within than between individuals across all contrasts, with greater variations in similarity related to state than session. However, we emphasize that any of the result patterns depicted in Figure \@ref(fig:outcome-plot) would provide supportive evidence of stable individual differences in EEG functional connectomes, albeit with somewhat different interpretations as we described above for the individual, individual-session, and individual-state effects.
+
+We had no expectations regarding the possible range of effect sizes we could find, but again note that relatively higher values correspond to greater within-individual functional connectome stability and between-individual differentiation across contexts; whereas relatively lower values correspond to lesser within-individual functional connectome stability and between-individual differentiation. However, to contextualize our results against the relevant fMRI literature, we considered the results of @grattonetal_FunctionalBrainNetworks_2018 as a cautious point of reference, keeping in mind that finding equivalent effect sizes would be surprising, given the differences in measurement, design, and analysis between our studies, on top of random variation in the data between our samples. In their study, @grattonetal_FunctionalBrainNetworks_2018 investigated how functional connectome similarity---measured using the Pearson correlation coefficient between the vectorized lower triangles of each functional connectome pair---differed within and between individuals across ten separate fMRI sessions and five different states (eyes-open resting state, and visual coherence, semantic, memory, and motor tasks). They found that functional connectomes were more similar within participants than between participants across contexts, on average, by approximately 0.2 points (on the response scale) when functional connectivity was estimated at the recording level, and by approximately 0.3 points (on the response scale) when functional connectivity was estimated using the split-half method (see, respectively, Figures S2 and 3 in @grattonetal_FunctionalBrainNetworks_2018).[^5] <!-- Note: At the individual-level (Supplemental Figure 2A, middle plot), there is little outcome variability across participants, and differences between the group and individual effects are approximately 0.3 more similar for every participant. -->
 
 Finally, given our focus on individual differences, we considered it naturally important to investigate outcome variability of these effects across participants; particularly because network variants have been characterized as a common phenomenon present in all individuals, rather than an idiosyncrasy of just a few individuals [@seitzmanetal_TraitlikeVariantsHuman_2019]. This served as a compliment to the group-level analysis of individual differences described above, allowing us to evaluate whether the group-level outcomes we observed would hold at the level of individuals (i.e., the level of observation where these differences originated from) in terms of the direction of these effects. Indeed, a central aim of investigating outcome variability was to dispel any misconceptions about the implications of our findings that could be caused by focusing only on the group-level outcomes---which can lead even highly trained experts to overestimate the importance and generalizability of findings due to uncertainty about average effects often being quite precise even in the presence of substantial outcome variability [@zhangetal_IllusionPredictabilityScientific_2022].
 
@@ -278,5 +280,7 @@ Finally, given our focus on individual differences, we considered it naturally i
 [^3]: For historically interested readers, this renewed interest in individual differences for network neuroscience research is much akin to Cronbach's [-@cronbach_TwoDisciplinesScientific_1957] treatise on the historic separation of scientific psychology into two distinct disciplines---the so-called *experimental* and *correlational* disciplines, which broadly speaking studied variance only among either  treatments or individuals, respectively---and the need for these disciplines to combine their efforts if the field ever hopes to solve its most important problems. Similar reflections are now being seen in the field of network neuroscience, as researchers increasingly recognize the importance of studying the variation that already exists between and within individuals to further our understanding of the human brain [e.g., @elliottetal_WhatTestRetestReliability_2020; @grattonetal_BrainbehaviorCorrelationsTwo_2022; @uddinetal_UniversalTaxonomyMacroscale_2019; @uddinetal_ControversiesProgressStandardization_2023].
 
 [^4]: To be clear, this is not to say that brain state or time have no influence on interindividual variability in connectivity strength. Indeed, the relative magnitude of functional connectome similarities within and between individuals has been found to vary moderately by behavioural or cognitive state and mildly by time such that individualization is measurably greater during certain brain states than others, and slightly greater for recordings taken during the same session [@finnetal_CanBrainState_2017; @grattonetal_FunctionalBrainNetworks_2018; @seitzmanetal_TraitlikeVariantsHuman_2019]. However, this influence is considerably smaller relative to the influence contributed by individuals themselves [@grattonetal_FunctionalBrainNetworks_2018].
+
+[^5]: These values correspond to the *main effect* contrasts in our study and were obtained by back-transforming the Fisher-transformed Pearson correlation coefficients for the group and individual effects reported in @grattonetal_FunctionalBrainNetworks_2018, then taking their difference. For the split-half method, functional connectivity was estimated for each individual and task on the basis of two 5 session groups (by concatenating the recordings from a given task in each group together to increase the reliability of functional connectivity estimates), rather than at the recording level (for further details, see @grattonetal_FunctionalBrainNetworks_2018).
 
 <!-- Footnotes end ----------------------------------------------------------->
